--- a/frontend/src/components/Input/Input.module.scss
+++ b/frontend/src/components/Input/Input.module.scss
@@ -5,32 +5,21 @@ $input-height: 3rem;
     z-index: 1;
     position: relative;
     width: 100%;
-    margin: 0 0 0.5rem;
+    margin: 0 0 1rem;
 }
 
 input {
-    border-radius: $border-radius;
+    box-shadow: inset 2px 2px 5px $shadow-color,
+        inset -5px -5px 10px $light-color;
     width: 100%;
-    height: $input-height;
-    background-color: #fafafa;
-    border: 1px solid $dark-color;
-    padding: 0 1rem;
-    outline: none;
-    transition: all 0.3s;
+    box-sizing: border-box;
+    transition: all 0.2s ease-in-out;
+    appearance: none;
+    -webkit-appearance: none;
 
-    &::placeholder {
-        color: $dark-color;
-        font-weight: 300;
-        text-transform: capitalize;
-    }
-
-    &:active,
     &:focus {
-        border-color: #66afe9;
-        -webkit-box-shadow: inset 0 1px 1px rgb(0 0 0 / 8%),
-            0 0 8px rgb(102 175 233 / 60%);
-        box-shadow: inset 0 1px 1px rgb(0 0 0 / 8%),
-            0 0 8px rgb(102 175 233 / 60%);
+        box-shadow: inset 1px 1px 2px $shadow-color,
+            inset -1px -1px 2px $light-color;
     }
 }
 
