--- a/frontend/src/scss/index.scss
+++ b/frontend/src/scss/index.scss
@@ -24,3 +24,13 @@ a {
     text-decoration: none;
     color: inherit;
 }
+
+button,
+input {
+    border: 0;
+    outline: 0;
+    border-radius: 18px;
+    padding: 1rem;
+    background-color: #ebecf0;
+    text-shadow: 1px 1px 0 $light-color;
+}
