--- a/frontend/src/style/index.scss
+++ b/frontend/src/style/index.scss
@@ -16,10 +16,6 @@ body {
     font-family: 'Noto Sans JP', sans-serif;
 }
 
-#root {
-    min-height: 100vh;
-}
-
 ul {
     list-style: none;
 }
@@ -29,12 +25,10 @@ a {
     color: inherit;
 }
 
-button,
-input {
-    border: 0;
-    outline: 0;
-    border-radius: 18px;
-    padding: 1rem;
-    background-color: #ebecf0;
-    text-shadow: 1px 1px 0 $light-color;
+.main {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 8vw;
+    min-height: 100vh;
 }
