--- a/frontend/src/pages/Lobby/Lobby.module.scss
+++ b/frontend/src/pages/Lobby/Lobby.module.scss
@@ -17,7 +17,7 @@
 
 header {
     display: flex;
-    grid-column: 2 / 4;
+    grid-column: 1 / 4;
     grid-row: 1;
     justify-content: space-around;
     align-items: center;
@@ -25,6 +25,10 @@ header {
     .hint {
         letter-spacing: 0.3rem;
         font-weight: 900;
+    }
+
+    h3 {
+        margin: 0;
     }
 }
 
@@ -37,5 +41,5 @@ header {
 
 .users {
     grid-column: 1;
-    grid-row: 1 / 3;
+    grid-row: 2 / 3;
 }
