--- a/frontend/src/pages/Home/Home.module.scss
+++ b/frontend/src/pages/Home/Home.module.scss
@@ -1,20 +1,6 @@
 @import '../../style/const';
 
-.root {
-    width: min(500px, 90vw);
-    background: #f1f3f6;
-    padding: 2rem 2rem 1rem;
-    display: flex;
-    flex-direction: column;
-    border-radius: $border-radius;
-    box-shadow: $neomorphic-shadow;
-
-    & > * {
-        margin-bottom: 0.75rem;
-    }
-}
-
-span {
+.footer {
     margin: 0.5rem auto 0;
     width: fit-content;
     color: $shadow-color;
