--- a/frontend/src/style/index.scss
+++ b/frontend/src/style/index.scss
@@ -32,3 +32,22 @@ a {
     padding: 0 8vw;
     min-height: 100vh;
 }
+
+.default-card {
+    width: min(600px, 90vw);
+    background: #f1f3f6;
+    padding: 2rem 2rem 1rem;
+    display: flex;
+    flex-direction: column;
+    border-radius: $border-radius;
+    box-shadow: $neomorphic-shadow;
+
+    & > * {
+        margin-bottom: 0.75rem;
+    }
+}
+
+.carousel .slide {
+    // shim for react responsive carousel
+    background: transparent !important;
+}
