[up] move everything to src

--- a/frontend/src/styles/index.module.scss
+++ b/frontend/src/styles/index.module.scss
@@ -8,9 +8,7 @@
     text-align: center;
     user-select: none;
 
-    &:hover {
-        a {
-            text-decoration: underline;
-        }
+    a:hover {
+        text-decoration: underline;
     }
 }
