--- a/frontend/src/components/DrawTools/DrawTools.module.scss
+++ b/frontend/src/components/DrawTools/DrawTools.module.scss
@@ -1,10 +1,16 @@
 .colors {
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
     border-radius: 0.3rem;
     overflow: hidden;
 
     button {
-        border-radius: 0 !important;
+        border: none;
+        outline: none;
+        width: 100%;
+        height: 20px;
     }
+}
+
+.active {
+    filter: brightness(80%);
 }
