--- a/frontend/src/components/Chat/Chat.module.scss
+++ b/frontend/src/components/Chat/Chat.module.scss
@@ -1,11 +1,16 @@
 .root {
     grid-column: 3;
     grid-row: 2;
+
     height: 100%;
     overflow: hidden;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
+
 .chat {
     overflow-y: scroll;
-    height: 88%;
-    padding-bottom: 0.2rem;
+    height: 90%;
 }
