--- a/frontend/src/styles/play.module.scss
+++ b/frontend/src/styles/play.module.scss
@@ -16,32 +16,43 @@
 }
 
 .header {
-    display: flex;
-    grid-column: 1 / 4;
+    grid-column: 2 / 4;
     grid-row: 1;
+
+    display: flex;
     justify-content: space-around;
     align-items: center;
 
-    & > * {
-        margin: 0 0.3rem !important;
-        text-align: center;
+    span {
+        font-weight: bold;
     }
 
     .hint {
         letter-spacing: 0.3rem;
         font-weight: 900;
     }
-
-    h3 {
-        margin: 0;
-    }
 }
 
 .canvas {
-    width: 100%;
-    height: 100%;
     grid-column: 2;
     grid-row: 2;
+}
+
+.timer {
+    grid-row: 1;
+    grid-column: 1;
+
+    font-size: 1.25rem;
+    font-weight: bold;
+    text-align: center;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.hint {
+    font-weight: bold;
 }
 
 .users {
