--- a/client/src/styles/global.scss
+++ b/client/src/styles/global.scss
@@ -1,5 +1,4 @@
 @import 'const';
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;400;700;900&display=swap');
 
 *,
 *::after,
@@ -11,9 +10,7 @@
 }
 
 body {
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    font-family: 'Noto Sans JP', sans-serif;
+    font-family: 'Noto Sans', sans-serif;
 }
 
 ul {
